Landing page background, padding and margin, scrollbar of whole app visible and colored, responsiveness fixed

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,69 +1,79 @@
 @import '../common/styles/main';
 
-
 .Header-main {
-  background-image:
-linear-gradient(to bottom, rgba(0, 0, 0, 0.082), rgba(0, 0, 0, 0.25)),
-url('../common/assets/images/wave-background.png');
-  // background-image: linear-gradient(rgba(0, 0, 0, 0.082),rgba(0, 0, 0, 0.25)),url(../common/assets/images/wave-background.png);
-  //background: rgba(0, 0, 0, 0.082);
+	background-image: linear-gradient(
+	to bottom,
+	rgba(0, 0, 0, 0.082),
+	rgba(0, 0, 0, 0.5)
+),
+	url('../common/assets/images/wave-background.png');
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: 50%;
+	background-repeat: no-repeat;
+	background-size: cover;
+	//opacity: 0.3;
+	height: calc(100vh - 440px);
+	//min-height: 128px;
+	top: calc(0px - 94px);
+	left: 0;
+	right: 0;
 
-  //background: $gradient;
-    height: calc(100vh - 500px);
-    min-height: 128px;
-  top: calc(0px - 94px);
-  left: 0;
-  right: 0;
-  min-height: 200px;
-  & img {
-    background-position: 50%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    opacity: .3;
-    background-color: $background;
-    background-position: 50%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    opacity: .3;
-  }
+	min-height: 230px;
+	flex-flow: column nowrap;
 
-  & a {
-    color: $primary;
-  }
+	// & img {
+	// 	background-repeat: no-repeat;
+	// 	background-size: cover;
+	// 	opacity: 0.3;
+	// 	background-color: $background;
+	// 	background-position: 50%;
+	// 	background-repeat: no-repeat;
+	// 	background-size: cover;
+	// 	opacity: 0.3;
+	// 	//transform: translateY(-5rem);
+	// }
+
+	& a {
+		color: $primary;
+	}
 }
-.Header-button{
-  a,a:hover{
-    color:inherit;
-  }
+
+.Header-button {
+	a,
+	a:hover {
+		color: inherit;
+	}
 }
+
 .Header-Heading {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  -ms-flex-flow: column nowrap;
-  flex-flow: column nowrap;
-  -ms-flex-align: center;
-  align-items: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	-ms-flex-flow: column nowrap;
+	flex-flow: column nowrap;
+	-ms-flex-align: center;
+	align-items: center;
+	-ms-flex-pack: center;
+	justify-content: center;
+	margin-bottom: 3rem;
 
+	&-light {
+		text-align: center;
+		color: $text;
+		min-height: 1rem;
+		font-size: 2rem;
+		margin: calc(2rem - 0.14285714em) 0 1rem;
+	}
 
-  &-light {
-    text-align: center;
-    color: $text;
-    min-height: 1rem;
-    font-size: 2rem;
-    margin: calc(2rem - .14285714em) 0 1rem;
-  }
+	&-dark {
+		text-align: center;
+		color: $gray;
+		margin-bottom: 30px;
+		font-size: 16px;
+	}
 
-  &-dark {
-    text-align: center;
-    color: $gray;
-    margin-bottom: 30px;
-    font-size: 16px;
-  }
-
-  &-link {
-    margin-top: 24px;
-  }
+	&-link {
+		margin-top: 24px;
+	}
 }
