--- a/src/components/Landing/landing-page.scss
+++ b/src/components/Landing/landing-page.scss
@@ -47,6 +47,7 @@
 		font-size: 14px;
 		margin-top: 15px;
 		width: 1127px;
+		height: 300px;
 		overflow-x: auto;
 		margin-left: auto !important;
 		margin-right: auto !important;
