--- a/src/components/common/landCard/land-card.scss
+++ b/src/components/common/landCard/land-card.scss
@@ -7,6 +7,8 @@
 	background-color: $card-background;
 	border-radius: 0.28571429rem !important;
 	margin: 5px;
+	margin-right: 25px !important;
+	height: fit-content;
 	color: $text;
 
 	&-preview {
