--- a/src/components/common/styles/main.scss
+++ b/src/components/common/styles/main.scss
@@ -5,9 +5,29 @@
 body {
 	background-color: $background;
 	color: $text;
+
+	& ::-webkit-scrollbar {
+		-webkit-appearance: none;
+		width: 10px;
+		height: 10px;
+	}
+
+	& ::-webkit-scrollbar-thumb {
+		cursor: pointer;
+		border-radius: 5px;
+		background: rgba(0, 0, 0, 0.25);
+		-webkit-transition: color 0.2s ease;
+		-o-transition: color 0.2s ease;
+		transition: color 0.2s ease;
+	}
+
+	& ::-webkit-scrollbar-track {
+		background: rgba(0, 0, 0, 0.1);
+		border-radius: 0;
+	}
 }
 
-h1 {
+body h1 {
 	font-family: Lato, Helvetica Neue, Arial, Helvetica, sans-serif;
 }
 
